Fix layout issues on the projects page and image size inconsistencies

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 .card img {
   width: 100%;
   height: 20vw;
-  object-fit: contain;
+  object-fit: fill;
 }
 
 hr {
